# rust-everyday

./: Cargo.toml  README.md
_001_testing/: Cargo.toml
_002_formatting/: Cargo.toml
_002_formatting/src/: main.rs
_003_variables_and_types/: Cargo.toml
_003_variables_and_types/src/: main.rs
_004_result/: Cargo.toml
_004_result/src/: main.rs
_005_concurrent_requests/: Cargo.toml
_005_concurrent_requests/src/: main.rs
_006_traits/: Cargo.toml
_006_traits/src/: main.rs
_007_rustbuster/: Cargo.toml
_007_rustbuster/src/: main.rs
_008_rustbuster_with_clap/: Cargo.toml
_009_rustbuster_continued/: Cargo.toml
_010_fix_take_in_rustbuster/: Cargo.toml
_011_consume_iter/: Cargo.toml
_011_consume_iter/src/: main.rs
_012_colored_output/: Cargo.toml
_012_colored_output/src/: main.rs
_013_owo_colors/: Cargo.toml
_014_understanding_unwrap/: Cargo.toml
_014_understanding_unwrap/src/: main.rs
_015_tokio_async_requests/: Cargo.toml
_015_tokio_async_requests/src/: main.rs
_016_bubble_sort/: Cargo.toml
_016_bubble_sort/src/: main.rs
_017_draw_svg/: Cargo.toml
_017_draw_svg/src/: main.rs
_018_alert_on_webpage_fail/: Cargo.toml
_018_alert_on_webpage_fail/src/: main.rs
_019_send_udp_packet/: Cargo.toml
_019_send_udp_packet/src/: main.rs
_020_option_and_result/: Cargo.toml
_021_callback_function/: Cargo.toml
_021_callback_function/src/: main.rs
_022_closures/: Cargo.toml
_022_closures/src/: main.rs
_023_have_I_been_pawned/: Cargo.toml
_023_have_i_been_pawned/: Cargo.toml
_023_have_i_been_pawned/src/: main.rs
_024_dialoguer/: Cargo.toml
_025_aes_encryption/: Cargo.toml
_025_aes_encryption/src/: main.rs
src/: .main.rs.swp
testfiles/: day7_wordlist.txt
