[package]
name = "rust-everyday"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.4"
reqwest = { version = "0.10.1", features = ["blocking"] }
tokio = { version = "0.2.11", features = ["full"] }
threadpool = "1.8.1"
clap = { version = "3.1.18", features = ["derive"] }
termion = "1.5.6"
owo-colors = "3.4.0"
rand = "0.8.5"
draw = "0.3.0"
