[workspace]

members = [
    "_001_testing",
    "_002_formatting",
    "_003_variables_and_types",
    "_004_result",
    "_005_concurrent_requests",
    "_006_traits",
    "_007_rustbuster",
    "_008_rustbuster_with_clap",
    "_009_rustbuster_continued",
    "_010_fix_take_in_rustbuster",
    "_011_consume_iter",
    "_012_colored_output",
    "_013_owo_colors",
    "_014_understanding_unwrap",
    "_015_tokio_async_requests",
    "_016_bubble_sort",
    "_017_draw_svg",
    "_018_alert_on_webpage_fail",
    "_019_send_udp_packet",
    "_020_option_and_result",
    "_021_callback_function",
    "_022_closures",
    "_023_have_I_been_pawned",
    "_024_dialoguer",
    "_025_aes_encryption",
]
