[package]
name = "_005_concurrent_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
reqwest = { version = "0.10.1", features = ["blocking"] }
tokio = { version = "0.2.11", features = ["full"] }
