[package]
name = "_008_rustbuster_with_clap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking"] }
threadpool = "1.8.1"
clap = { version = "3.1.6", features = ["derive"] }
