[package]
name = "_011_consume_iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking"] }
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "0.2.11", features = ["full"] }
threadpool = "1.8.1"
