[package]
name = "_015_tokio_async_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
