[package]
name = "_023_have_i_been_pawned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "0.0.4"
sha1 = "0.10.1"
hex = "0.4.3"
reqwest = { version = "0.10.1", features = ["blocking"] }
